[package]
name = "fab-manifold"
version = "0.1.0"
edition = "2024"
description = "Pure-Rust reimplementation of the Manifold geometry kernel — deterministic native==wasm (SPEC_manifold-rs.md)"
license = "GPL-2.0-or-later"

[dependencies]
# Pillar 2 — portable transcendentals, bit-identical native==wasm. EVERY sin/cos/etc goes through
# src/mathf.rs (which calls libm); direct `f64::sin` is clippy-banned (clippy.toml) to force it.
libm = "0.2"
# Structured diagnostics (verbatim-port debugging: per-stage collapse counts, differential divergence).
# Compiled out at release log levels; the workspace already standardises on `tracing`.
tracing = "0.1"
# Typed geometry errors (`status::Error`). The eager ops surface failure as `Result`, NOT the C++
# lazy-CSG `status_` field — see `status.rs`. Workspace already standardises on `thiserror` v2.
thiserror = "2"
# M.0.2.1 — the shared geometry vocabulary (linalg lifted out post-R6; see types/).
fab-types = { path = "../types" }

# R5 — the 2D boolean engine. Manifold's 2D IS Clipper2; we adopt i_overlay (pure-Rust, integer-coords ⇒
# deterministic + wasm-clean) and validate by AREA-residual, NOT bit-match (SPEC [OPEN #4], M.5.0 spike).
i_overlay = "7.0.2"

[features]
default = []
# Pillar 1 — the deterministic parallel layer. OFF = serial (the always-safe default, bit-identical to
# native par by the CommutativeAssociative construction). ON: rayon's OS-thread pool on native, and on
# wasm32-unknown-unknown rayon over wasm-bindgen-rayon's Web-Worker + SharedArrayBuffer pool (M.6.1) —
# that build needs nightly `-Zbuild-std=panic_abort,std` + `+atomics,+bulk-memory,+mutable-globals`
# (scripts/wasm-par-check.sh) and the APP must await `init_thread_pool` (re-exported from lib.rs)
# before any kernel call; the page needs COOP/COEP (cross-origin isolation). wasm32-wasip1 — the
# wasmtime test lane — stays serial regardless (see build.rs `par_live`).
par = ["dep:rayon", "dep:wasm-bindgen-rayon"]
# The C++ Manifold DIFFERENTIAL ORACLE (the R0..R.X scaffold). Links manifold3d for the KernelDriver's
# CppKernel; OFF by default, and DROPPED at R.X (the finish line). Native-only (needs the C++ toolchain).
oracle = ["dep:manifold3d"]

[dependencies.rayon]
version = "1"
optional = true

# Browser-wasm thread pool for rayon (Web Workers + SharedArrayBuffer). Target-scoped so `par` on
# native never sees it; `dep:` activation is a no-op off-target.
[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies.wasm-bindgen-rayon]
version = "1.3"
optional = true

[dependencies.manifold3d]
version = "0.3.1"
optional = true

[dev-dependencies]
# Test-time tracing subscriber (RUST_LOG-driven) so the differential debug harness can surface per-stage
# collapse counts + fold divergence without hand-edited eprintln.
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "std"] }

# proptest pulls `rusty-fork` → `wait-timeout`, which doesn't build for wasm (process forking). Gate it
# (and its tests, `#[cfg(not(target_arch = "wasm32"))]`) off wasm so the test HARNESS cross-compiles — the
# `wasm32-wasip1` build is how M.4.4's determinism golden proves native==wasm bit-identity.
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
# Port-tests-first: proptest drives the structure-aware CSG-tree fuzzer (Manifold's manifold_fuzz).
proptest = "1"
