[package]
name = "fab-web"
version = "0.1.0"
edition = "2021"
description = "Browser build of the fab slicer: client-only auto-slicing, zero server-side outputs"
license = "MIT"

# cdylib = the wasm module; rlib so the native dev bin (src/main.rs) links the same app.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
# The kernel WITHOUT native: booleans/slicing/plan in-process, no OpenSCAD, no reqwest.
fab-scad = { path = "..", default-features = false, features = ["kernel"] }
# A.6 trim: bevy defaults are [2d, 3d, ui, audio] — we render 3d + feathers ui only, so drop
# the sprite pipeline + audio (the AudioContext-before-gesture console warning goes with it).
bevy = { version = "0.19", default-features = false, features = [
    "3d",
    "ui",
    "bevy_feathers",
    "bevy_picking",
    "mesh_picking",
    # the A.3 editor overlay (section loops + onion circles) is immediate-mode gizmos
    "bevy_gizmos",
    "bevy_gizmos_render",
] }
# File open on both targets: native dialog on desktop, <input type=file> on wasm.
rfd = "0.17"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
js-sys = "0.3"
# Window/Location: query params; Document/Element: canvas attrs; Blob/Url/anchor: the 3mf download
web-sys = { version = "0.3", features = [
    "Window",
    "Location",
    "Document",
    "Element",
    "Blob",
    "Url",
    "HtmlAnchorElement",
    "Response",
] }
