# cargo-fuzz project for fab-lang. Standalone `[workspace]` (cargo-fuzz convention) so it stays OUT
# of the parent workspace: it needs nightly + libFuzzer, which the stable `cargo build`/`test`/clippy
# at the repo root must never try to compile. Run it explicitly: `cargo +nightly fuzz run parse`.
[package]
name = "fab-lang-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.fab-lang]
path = ".."

[[bin]]
name = "parse"
path = "fuzz_targets/parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lex"
path = "fuzz_targets/lex.rs"
test = false
doc = false
bench = false
