# cargo-fuzz project for fab-lang. Standalone `[workspace]` (cargo-fuzz convention) so it stays OUT
# of the parent workspace: it needs nightly + libFuzzer, which the stable `cargo build`/`test`/clippy
# at the repo root must never try to compile. Run it explicitly: `cargo +nightly fuzz run parse`.
[package]
name = "fab-lang-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.fab-lang]
path = ".."

# The `jit_diff` target compiles a numeric function to native code and diffs it against the interpreter.
[dependencies.fab-jit]
path = "../../jit"

# The `gen_diff` target (AJ.6) drives the grammar generator from fuzzer bytes and A/Bs the eval
# across cache configs — the Config bit-identity contract as a continuous oracle.
[dependencies.fab-gen]
path = "../../gen"

[[bin]]
name = "parse"
path = "fuzz_targets/parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lex"
path = "fuzz_targets/lex.rs"
test = false
doc = false
bench = false

# Fuzz the evaluator (parse → eval → geometry → mesh): the whole value machinery + both iterative Drops.
[[bin]]
name = "eval"
path = "fuzz_targets/eval.rs"
test = false
doc = false
bench = false

# Fuzz the JIT for bit-identity with the interpreter — the only tool that executes the JIT's native code.
[[bin]]
name = "jit_diff"
path = "fuzz_targets/jit_diff.rs"
test = false
doc = false
bench = false

[[bin]]
name = "gen_diff"
path = "fuzz_targets/gen_diff.rs"
test = false
doc = false
bench = false
