[package]
name = "wasm-gui-spike"
version = "0.1.0"
edition = "2021"
description = "18.5 spike: does the Bevy 0.19 GUI stack (feathers + mesh picking) run in a browser?"
license = "MIT"

# Standalone on purpose — NOT a member of the fab-scad workspace, so the spike's wasm-only
# deps never touch the normal build. Delete the whole directory to retire the spike.
[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Matrix knobs for the 18.5 gate: default mirrors the real GUI (feathers on, WebGL2 backend).
# `--features webgpu` retargets the wgpu backend; `--no-default-features` strips feathers to
# price the plain-bevy_ui fallback if feathers is broken on both backends.
default = ["feathers"]
feathers = ["bevy/bevy_feathers"]
webgpu = ["bevy/webgpu"]

# Wire-size reality check: default release (no LTO, 16 codegen units) ships 88 MiB raw /
# 17.6 MiB gzip. This is the standard wasm size profile; measure both for the report.
[profile.release]
opt-level = "s"
lto = "thin"
codegen-units = 1
strip = "debuginfo"

[dependencies]
# Same bevy + extra features as gui/Cargo.toml (bevy_feathers gated above for the matrix).
bevy = { version = "0.19", features = ["bevy_picking", "mesh_picking"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
