[package]
name = "wasm-kernel-spike"
version = "0.1.0"
edition = "2024"
description = "18.4 spike: the Manifold kernel (unstable-wasm-uu) under wasm-bindgen in a browser"
license = "MIT"

# Standalone on purpose — NOT a member of the fab-scad workspace, so the spike's wasm-only
# deps never touch the normal build. Delete the whole directory to retire the spike.
[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
fab-scad = { path = "../..", default-features = false, features = ["kernel"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
